@@ -1058,6 +1058,7 @@ class SomaXML:
     knownTags += ["k_umbrella"]
     knownTags += ["structure_q"]
     knownTags += ["polyconversion"]
+    knownTags += ["density_weights"]
 
 ## Class to create a hdf5 configuration file generated by an input xml file.
 class Configuration(SomaXML):
@@ -1169,7 +1170,10 @@ class Configuration(SomaXML):
         self.external_field = self.create_external_field()
 
         ##String Field array
-        self.umbrella_field=self.create_umbrella_field()
+        self.umbrella_field = self.create_umbrella_field()
+
+        #Density weights
+        self.density_weights = self.create_density_weights()
 
         ## initialize the poly conversion class
         self.poly_conversion = Configuration.PolyConversion(self.root,self.nxyz,self.poly_arch)
@@ -1205,6 +1209,7 @@ class Configuration(SomaXML):
             create_list += [("/parameter/poly_arch_length",self.poly_arch_length)]
             create_list += [("/parameter/poly_arch",self.poly_arch.poly_arch)]
             create_list += [("/poly_type",self.poly_type)]
+            create_list += [("/parameter/density_weights",self.density_weights)]
             if type(self.cm_a) is numpy.ndarray:
                 create_list += [("/parameter/cm_a",self.cm_a)]
             if type(self.harmonic_normb_variable_scale) is numpy.ndarray:
@@ -1259,7 +1264,6 @@ class Configuration(SomaXML):
                 f.create_dataset("/polyconversion/input_type",data=self.poly_conversion.pc_list[:,0])
                 f.create_dataset("/polyconversion/output_type",data=self.poly_conversion.pc_list[:,1])
                 f.create_dataset("/polyconversion/end",data=self.poly_conversion.pc_list[:,2])
-
 
 
     ## Update an existing hdf5-file with the read parameter if possible.
@@ -1392,6 +1396,40 @@ class Configuration(SomaXML):
             k_array[i] = k_dict[i]
 
         return k_array
+
+    ## Create the "density_weights"
+    ## @return density_weights Array
+    def create_density_weights(self):
+        density_weights = numpy.zeros( (self.types.n_types_equiv,),dtype=soma_type.get_soma_scalar_type())
+        density_weights += 1
+
+        dw_str = ""
+        for dw in self.root.iter('density_weights'):
+            dw_str += dw.text
+        dw_dict = {}
+        for line in dw_str.split("\n"):
+            line = line.strip()
+            if len(line) > 0 and line[0] != '#':
+                line = line.split()
+                assert (len(line) == 2),("A entry should be composed by 'type_name value', but got "+str(line))
+                dw_dict[self.types.get_equiv(line[0])] = float(line[1])
+
+        for i in dw_dict.keys():
+            density_weights[i] = dw_dict[i]
+
+        if density_weights.any() < 0:
+            raise RuntimeError("Invalid negative density weights found")
+        if density_weights.sum() == 0:
+            raise RuntimeError("Invalid density weights with a sum of 0")
+
+        #normalize weights
+        old_sum = density_weights.sum()
+        density_weights *= (density_weights.size/old_sum)
+
+        assert abs(density_weights.sum() - self.types.n_types_equiv) < 1e-8, "Check density weight sum"+str(density_weights)
+        print(density_weights)
+        return density_weights
+
 
     ## Create the mobility array for each polymer type center of mass.
     ## @return cm_a array
